lab8_dir/lab-kustomize/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless-service
  namespace: web-app
  labels:
    app: postgres
spec:
  ports:
  - name: postgres
    port: 5432
  clusterIP: None
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: web-app
  labels:
    app: postgres
spec:
  ports:
  - name: postgres
    port: 5432
  selector:
    app: postgres
